<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/returnButtonText"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="Log Run"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:id="@+id/eventDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="Date"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/selectRun"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="Distance"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/distanceText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="KM"
            android:textAlignment="textEnd"
            android:textColor="@color/darkGray"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="17dp"
            android:text="Time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/timePickerButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="00:00:00"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:onClick="openTimePicker"
            style="?android:spinnerStyle"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonText"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:onClick="saveLogAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <!-- onClick Not called directly anymore -->

    <TextView
        android:id="@+id/alertTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/saveButton"
        android:textSize="22sp"
        android:visibility="invisible"/>

</LinearLayout>